[package]
name = "hematite-nbt-serde"
version = "0.1.0"
authors = ["Aaron Jacobs <atheriel@gmail.com>"]

[dependencies]
serde = "0.9"
flate2 = "0.2"
byteorder = "1.0"

[dev-dependencies]
serde_derive = "0.9"
hematite-nbt = { path = "..", version = "*" }

[[bench]]
name = "filetest-bench"
path = "tests/filetests.rs"

[[bench]]
name = "mcdata-bench"
path = "tests/mcdata_tests.rs"

[lib]
name = "nbt_serde"
test = false
bench = false
